--- a/src/main/resources/templates/common/version.html
+++ b/src/main/resources/templates/common/version.html
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="${base}/js/layui/layui.js"></script>
+
 <script>
     layui.config({
         base: '${base}/js/',
