--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
             <!--头部搜索-->
             <section class="panel panel-padding login-pane">
                 <h1 class="head-title">登录</h1>
-                <form class="layui-form layui-form-pane" action="/login" method="post">
+                <form class="layui-form layui-form-pane" action="${base}/login" method="post">
                     <div class="layui-form-item">
                         <label class="layui-form-label"><i class="iconfont">&#xe672;</i> 帐号</label>
                         <div class="layui-input-block">
