--- a/src/main/resources/templates/role/role.html
+++ b/src/main/resources/templates/role/role.html
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>后台模板</title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no">
-    <!-- load css -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all">
-    <link rel="stylesheet" type="text/css" href="css/font/iconfont.css" media="all">
-    <link rel="stylesheet" type="text/css" href="css/layui.css" media="all">
-    <link rel="stylesheet" type="text/css" href="css/main.css?v1.0.0" media="all">
-</head>
+<#include "/common/header.html" />
 
 <body>
 <div class="container-fluid larry-wrapper">
@@ -24,11 +7,11 @@
             <!--头部搜索-->
             <section class="panel panel-padding">
                 <form class="layui-form" data-params='{"dataName":"role","key":"id","action":"list"}'
-                      action="/role/list">
+                      action="${base}/role/list">
                     <div class="layui-form">
                         <div class="layui-inline">
                             <div class="layui-input-inline">
-                                <input class="layui-input" name="keyword" placeholder="关键字">
+                                <input class="layui-input" name="name" placeholder="关键字">
                             </div>
                         </div>
                         <div class="layui-inline">
@@ -42,11 +25,11 @@
             <section class="panel panel-padding">
                 <div class="group-button">
                     <button class="layui-btn layui-btn-small layui-btn-danger ajax-all"
-                            data-params='{"url": "/role/delete","dataName":"role","key":"id","action":"del"}'>
+                            data-params='{"url": "${base}/role/delete","dataName":"role","key":"id","action":"del"}'>
                         <i class="iconfont">&#xe626;</i> 删除
                     </button>
                     <button class="layui-btn layui-btn-small modal"
-                            data-params='{"content": "/role/add", "title": "添加角色","full":"true","action":"add","dataName":"role","key":"id","type":2}'>
+                            data-params='{"content": "${base}/role/add", "title": "添加角色","full":"true","action":"add","dataName":"role","key":"id","type":2}'>
                         <i class="iconfont">&#xe649;</i> 添加角色
                     </button>
                 </div>
@@ -57,7 +40,7 @@
                             <th width="30"><input type="checkbox" id="checkall" data-name="id" lay-filter="check"
                                                   lay-skin="primary"></th>
                             <th>角色名称</th>
-                            <th>描述</th>
+                            <th>角色标识</th>
                             <th width="142">操作</th>
                         </tr>
                         </thead>
@@ -72,21 +55,21 @@
 </div>
 </body>
 
-<script id="list-tpl" type="text/html" data-params='{"url":"/role/list","dataName":"role","key":"id","pageid":"#page"}'>
+<script id="list-tpl" type="text/html" data-params='{"url":"${base}/role/list","dataName":"role","key":"id","pageid":"#page"}'>
     {{# layui.each(d.list, function(index, item){ }}
     <tr>
         <td><input type="checkbox" name="id" value="{{ item.id}}" lay-skin="primary"></td>
-        <td><span class="edit" data-params='{"url":"/role/update","field":"name","data":"id={{ item.id}}"}'>{{item.name}}</span>
+        <td><span class="edit" data-params='{"url":"${base}/role/update","field":"name","data":"id={{ item.id}}"}'>{{item.name}}</span>
         </td>
         <td>{{ item.code}}</td>
         <td>
             <div class="layui-btn-group">
                 <button class="layui-btn layui-btn-mini modal"
-                        data-params='{"content": "/role/update", "title": "{{item.name}}","full":"true","data":"id={{ item.id }}","action":"edit","bind":true,"type":2}'>
+                        data-params='{"content": "${base}/role/update", "title": "{{item.name}}","full":"true","data":"id={{ item.id }}","action":"edit","bind":true,"type":2}'>
                     <i class="iconfont">&#xe653;</i>编辑
                 </button>
                 <button class="layui-btn layui-btn-mini layui-btn-danger ajax"
-                        data-params='{"url": "/role/delete","action":"del","data":"id={{ item.id }}"}'>
+                        data-params='{"url": "${base}/role/delete","action":"del","data":"id={{ item.id }}"}'>
                     <i class="iconfont">&#xe626;</i>删除
                 </button>
             </div>
@@ -95,9 +78,8 @@
     {{# }); }}
 </script>
 
-<script src="js/layui/layui.js"></script>
-
 <#include "/common/version.html" />
+
 <script>
     layui.use('list');
 </script>
