小细节修改

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -47,13 +47,13 @@
                         <span>系统设置</span>
                     </a>
                 </li>
-                </@security.authorize>
-                <li class="layui-nav-item layui-this">
-                    <a href="javascript:;" data-title="文章管理">
-                        <i class="iconfont hide-icon">&#xe689;</i>
-                        <span>文章管理</span>
-                    </a>
-                </li>
+            </@security.authorize>
+            <li class="layui-nav-item layui-this">
+                <a href="javascript:;" data-title="文章管理">
+                    <i class="iconfont hide-icon">&#xe689;</i>
+                    <span>文章管理</span>
+                </a>
+            </li>
             </ul>
         </div>
         <!-- 头部右侧导航 -->
@@ -97,9 +97,9 @@
                 <div class="sub-menu">
                     <ul class="layui-nav layui-nav-tree">
                         <li class="layui-nav-item">
-                            <a href="javascript:;" data-title="权限管理">
+                            <a href="javascript:;" data-title="基本设置">
                                 <i class="iconfont">&#xe609;</i>
-                                <span>权限管理</span><em class="layui-nav-more"></em>
+                                <span>基本设置</span><em class="layui-nav-more"></em>
                             </a>
                             <dl class="layui-nav-child">
                                 <dd>
@@ -124,7 +124,7 @@
                         </li>
                     </ul>
                 </div>
-                </@security.authorize>
+            </@security.authorize>
             <div class="sub-menu">
                 <ul class="layui-nav layui-nav-tree">
                     <li class="layui-nav-item">
