--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -25,7 +25,7 @@
             <section class="panel panel-padding">
                 <div class="group-button">
                     <button class="layui-btn layui-btn-small layui-btn-danger ajax-all"
-                            data-params='{"url": "${base}/role/delete","dataName":"role","key":"id","action":"del"}'>
+                            data-params='{"url": "${base}/role/delete","confirm":"true","dataName":"role","key":"id","action":"del"}'>
                         <i class="iconfont">&#xe626;</i> 删除
                     </button>
                     <button class="layui-btn layui-btn-small modal"
@@ -69,7 +69,7 @@
                     <i class="iconfont">&#xe653;</i>编辑
                 </button>
                 <button class="layui-btn layui-btn-mini layui-btn-danger ajax"
-                        data-params='{"url": "${base}/role/delete","action":"del","data":"id={{ item.id }}"}'>
+                        data-params='{"url": "${base}/role/delete","confirm":"true","action":"del","data":"id={{ item.id }}"}'>
                     <i class="iconfont">&#xe626;</i>删除
                 </button>
             </div>
