--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -10,8 +10,21 @@
                     <div class="layui-form">
                         <div class="layui-inline">
                             <div class="layui-input-inline">
-                                <input class="layui-input" name="loginName" placeholder="关键字">
+                                <input class="layui-input" name="loginName" placeholder="登录名">
                             </div>
+                        </div>
+                        <div class="layui-inline">
+                            <div class="layui-input-inline">
+                                <input class="layui-input" name="nickName" placeholder="昵称">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <select name="roleId">
+                                <option value="0">请选择角色</option>
+                                <option value="1">时代新人</option>
+                                <option value="2">今日头条</option>
+                                <option value="3">科技朝文</option>
+                            </select>
                         </div>
                         <div class="layui-inline">
                             <button lay-submit class="layui-btn" lay-filter="search">查找</button>
