--- a/src/main/resources/templates/article/add.html
+++ b/src/main/resources/templates/article/add.html
@@ -89,7 +89,7 @@
     layui.use('product', function () {
         var $ = layui.jquery;
         layui.upload({
-            url: '${base}/upload/img',
+            url: '${base}/upload',
             elem: '#tp',
             before: function (input) {
                 box = $(input).parent('form').parent('div').parent('.layui-input-block');
